# archer-pm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build_release_assets.yml  create_release.yml  release.yml  test_main.yml  upload_release_assets.yml
src/: error.rs  lib.rs  macros.rs  package_compression.rs  packages.rs  zip_manipulation.rs
src/executable/: cli.rs  informer.rs  main.rs  modifier.rs  tui.rs  util.rs
test_files/test_dir/: out.txt  sample.txt
test_files/test_dir/next_level/: sample_2.txt
