[package]
name = "archer_package_manager"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "apm"
path = "src/executable/main.rs"
required-features = ["with-exe"]

[features]
default = ["all"]
all = ["with-exe", "with-info", "all_exporters", "with-tui"]

with-exe = ["clap"]
with-info = ["with-exe", "fast-xml"]
with-tui = ["crossterm"]

all_exporters = ["json_exporter", "toml_exporter", "xml_exporter"]
json_exporter = ["serde", "serde_json"]
toml_exporter = ["serde", "toml"]
xml_exporter = ["serde", "fast-xml"]

[dependencies]
zip = "0.6" 
sha2 = "0.10"
base64 = "0.13"
walkdir = "2.3"
paste = "1.0"
const_format = "0.2"
clap = { version = "3.1", features = ["derive"], optional = true }
fast-xml = { version = "0.23", features = ["serialize"], optional = true }
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
toml = { version = "0.5", optional = true }
crossterm = {version = "0.23", optional = true}
